Mobile image spacing fix

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -67,6 +67,7 @@ label {
 
 .info-block-image {
   max-height: 300px;
+  max-width: 100%;
 }
 
 .info-block-text {
